its a way of life

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# Do something useful with ⌘S in Safari
+# Do something useful with ⌘S in Safari #
 
-## Submit your forms like a boss.
+## Submit your forms like a boss. ##
 
 MIT license coming soon.
